--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,8 @@
  @ copyright 2019
 -->
 <head>
-	<title>example site</title>
+	<title>example site-master changes
+	</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
