--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <!--
  @ copyright 2019
+adding changes before rebase conflicts
+
 -->
 <head>
 	<title>example site-master changes
