--- a/simple.html
+++ b/simple.html
@@ -2,7 +2,7 @@
 <!--
  @ copyright 2019
 adding changes before rebase conflicts
-
+added additional changes from master
 -->
 <head>
 	<title>example site-master changes
