mb before rebase conflicts...help someone today

--- a/simple.html
+++ b/simple.html
@@ -3,6 +3,8 @@
  @ copyright 2019
 adding changes before rebase conflicts
 added additional changes from master
+
+adding changes before rebase conflicts :)
 -->
 <head>
 	<title>example site-master changes
