--- a/simple.html
+++ b/simple.html
@@ -4,8 +4,8 @@
 adding changes before rebase conflicts
 added additional changes from master
 
-adding changes before rebase conflicts :) master changes coflicting
-adding more conflicts
+adding changes before rebase conflicts :)
+made some additional feature/temp2 changes
 -->
 <head>
 	<title>example site-master changes
@@ -22,11 +22,10 @@ adding more conflicts
 <body>
 	<main class="container">
 	<!-- Content Goes Here -->
-	conflicts again
+	conflicts
 		<p>
 			Just some content...hi
 		</p>
-		more conflicts...more again
 	</main>
 	<footer class="container">
 		<p>&copy; Company 2019</p>
