--- a/simple.html
+++ b/simple.html
@@ -21,9 +21,11 @@ adding changes before rebase conflicts :)
 <body>
 	<main class="container">
 	<!-- Content Goes Here -->
+	conflicts
 		<p>
 			Just some content...hi
 		</p>
+		more conflicts
 	</main>
 	<footer class="container">
 		<p>&copy; Company 2019</p>
