i smell trouble brewing more, even stronger...

--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,8 @@
 adding changes before rebase conflicts
 added additional changes from master
 
-adding changes before rebase conflicts :)
+adding changes before rebase conflicts :) master changes coflicting
+adding more conflicts
 -->
 <head>
 	<title>example site-master changes
@@ -21,11 +22,11 @@ adding changes before rebase conflicts :)
 <body>
 	<main class="container">
 	<!-- Content Goes Here -->
-	conflicts
+	conflicts again
 		<p>
 			Just some content...hi
 		</p>
-		more conflicts
+		more conflicts...more again
 	</main>
 	<footer class="container">
 		<p>&copy; Company 2019</p>
