adding changes after rease

--- a/simple.html
+++ b/simple.html
@@ -8,7 +8,7 @@ adding changes before rebase conflicts :)
 made some additional feature/temp2 changes
 -->
 <head>
-	<title>example site-master changes
+	<title>sample
 	</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
