local copyright change for simple.html

--- a/simple.html
+++ b/simple.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <!--
  @ copyright 2019
 adding changes before rebase conflicts
@@ -28,7 +27,7 @@ made some additional feature/temp2 changes
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company GA 2016-2019</p>
+		<p>&copy; Company 2019-2020</p>
 	</footer>
 </body>
 </html>
