--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <hr>
 
       <footer>
-        <p>&copy; Company 2014-2019</p>
+        <p>&copy; other devs workings Company 2014-2019</p>
       </footer>
     </div> <!-- /container -->        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')</script>
