--- a/simple.html
+++ b/simple.html
@@ -28,7 +28,7 @@ made some additional feature/temp2 changes
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2019</p>
+		<p>&copy; Company GA 2016-2019</p>
 	</footer>
 </body>
 </html>
