commit stash changes

--- a/simple.html
+++ b/simple.html
@@ -7,8 +7,7 @@ adding changes before rebase conflicts :)
 made some additional feature/temp2 changes
 -->
 <head>
-	<title>sample
-	</title>
+	<title>sample updated for web</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -23,7 +22,7 @@ made some additional feature/temp2 changes
 	<!-- Content Goes Here -->
 	conflicts
 		<p>
-			Just some content...hi
+			Just some content...hi...stash changes...
 		</p>
 	</main>
 	<footer class="container">
