tagging title update

--- a/simple.html
+++ b/simple.html
@@ -7,7 +7,7 @@ adding changes before rebase conflicts :)
 made some additional feature/temp2 changes
 -->
 <head>
-	<title>sample updated for web, update</title>
+	<title>sample updated for web, update tags</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
